[package]
name = "starknet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.3", features = ["std"] }
num-traits = { version = "0.2.8", features = ["std"] }
num = "*"
serde = "*"
